--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-rating": "^2.0.5",
     "react-star-ratings": "^2.3.0",
     "react-switch": "^5.0.1",
+    "react-time-ago": "^6.0.1",
     "style-loader": "^1.2.1",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
